# Threat-Intel-Knowledge-Graph

./: Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
src/: __init__.py  exceptions.py
src/analysis/: trends.py
src/api/: main.py  middleware.py
src/dashboard/: app.py
src/gnn/: predictor.py
src/graph/: knowledge_graph.py
src/ingesters/: feeds.py
tests/: conftest.py  test_integration.py  test_threat_intel.py
